--- a/index.html
+++ b/index.html
@@ -7,13 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>my portfolio </title>
 
-  <script>
-    // Dynamically set base URL for GitHub Pages
-    if (window.location.hostname === "anshulai.github.io") {
-      document.write('<base href="/my-protfolio-website-/">');
-    }
-  </script>
-
   <!--
     - favicon
   -->
@@ -30,6 +23,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+  <!--
+    - custom js link (moved to head for path handling)
+  -->
+  <script src="assets/js/script.js" defer></script>
 </head>
 
 <body>
@@ -228,11 +226,6 @@
     </div>
 
   </main>
-
-  <!--
-    - custom js link
-  -->
-  <script src="assets/js/script.js"></script>
 
   <!--
     - ionicon link
