fix: Update asset handling with early script loading and improved path resolution

--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>my portfolio </title>
+  <meta name="deploy-env" content="github-pages">
+  <title>my portfolio</title>
+
+  <!--
+    - custom js link (moved to head and loaded first for path handling)
+  -->
+  <script src="assets/js/script.js"></script>
 
   <!--
     - favicon
@@ -23,11 +29,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-
-  <!--
-    - custom js link (moved to head for path handling)
-  -->
-  <script src="assets/js/script.js" defer></script>
 </head>
 
 <body>
