--- a/index.html
+++ b/index.html
@@ -5,34 +5,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="deploy-env" content="github-pages">
   <title>my portfolio</title>
-
-  <!--
-    - Inline script for immediate path handling
-  -->
-  <script>
-    (function() {
-      var pathPrefix = window.location.hostname === 'anshulai.github.io' ? '/my-protfolio-website-' : '';
-      function fixPath(path) { return (pathPrefix + '/' + path).replace(/\/+/g, '/'); }
-      window.getAssetPath = fixPath;
-    })();
-  </script>
-
-  <!--
-    - custom js link for main functionality
-  -->
-  <script src="assets/js/script.js"></script>
 
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="assets/images/logo.ico" type="image/x-icon" onerror="this.href = window.getAssetPath(this.getAttribute('href'))">
+  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
 
   <!--
     - custom css link
   -->
-  <link rel="stylesheet" href="assets/css/style.css" onerror="this.href = window.getAssetPath(this.getAttribute('href'))">
+  <link rel="stylesheet" href="./assets/css/style.css">
 
   <!--
     - google font link
@@ -59,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="assets/images/my-avatar.png" alt="Anshul Kumar Singh" width="80" onerror="this.src = window.getAssetPath(this.getAttribute('src'))">
+          <img src="./assets/images/my-avatar.png" alt="Anshul Kumar Singh" width="80">
         </figure>
 
         <div class="info-content">
@@ -67,7 +50,7 @@
 
           <p class="title">Software Developer</p>
 
-          <a href="assets/cv/Anshul_Kumar_Singh_CV.pdf" class="cv-btn" download onerror="this.href = window.getAssetPath(this.getAttribute('href'))">
+          <a href="./assets/cv/Anshul_Kumar_Singh_CV.pdf" class="cv-btn" download>
             <ion-icon name="download-outline"></ion-icon>
             <span>Download CV</span>
           </a>
@@ -198,7 +181,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="assets/images/icon-design.svg" alt="design icon" width="40" onerror="this.src = window.getAssetPath(this.getAttribute('src'))">
+                <img src="./assets/images/icon-design.svg" alt="design icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -214,7 +197,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="assets/images/icon-dev.svg" alt="Web development icon" width="40" onerror="this.src = window.getAssetPath(this.getAttribute('src'))">
+                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -244,6 +227,11 @@
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+  <!--
+    - custom js link
+  -->
+  <script src="./assets/js/script.js"></script>
 
 </body>
 
