--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/my-protfolio-website-/assets/images/logo.ico" type="image/x-icon">
 
   <!--
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="/my-protfolio-website-/assets/css/style.css">
 
   <!--
     - google font link
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Anshul Kumar Singh" width="80">
+          <img src="/my-protfolio-website-/assets/images/my-avatar.png" alt="Anshul Kumar Singh" width="80">
         </figure>
 
         <div class="info-content">
@@ -50,7 +50,7 @@
 
           <p class="title">Software Developer</p>
 
-          <a href="./assets/cv/Anshul_Kumar_Singh_CV.pdf" class="cv-btn" download>
+          <a href="/my-protfolio-website-/assets/cv/Anshul_Kumar_Singh_CV.pdf" class="cv-btn" download>
             <ion-icon name="download-outline"></ion-icon>
             <span>Download CV</span>
           </a>
@@ -181,7 +181,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg" alt="design icon" width="40">
+                <img src="/my-protfolio-website-/assets/images/icon-design.svg" alt="design icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -197,7 +197,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="/my-protfolio-website-/assets/images/icon-dev.svg" alt="Web development icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -231,7 +231,7 @@
   <!--
     - custom js link
   -->
-  <script src="./assets/js/script.js"></script>
+  <script src="/my-protfolio-website-/assets/js/script.js"></script>
 
 </body>
 
