fix: Add content for Resume and My Work sections

--- a/index.html
+++ b/index.html
@@ -216,7 +216,41 @@
 
       </article>
 
-      <!-- Rest of your articles (Resume, Portfolio) -->
+      <!--
+        - #RESUME
+      -->
+
+      <article class="resume" data-page="resume">
+
+        <header>
+          <h2 class="h2 article-title">Resume</h2>
+        </header>
+
+        <section class="resume-text">
+          <p>
+            Here is a detailed overview of my professional experience, education, and skills. Please download my CV for more information.
+          </p>
+        </section>
+
+      </article>
+
+      <!--
+        - #MY WORK
+      -->
+
+      <article class="my-work" data-page="my work">
+
+        <header>
+          <h2 class="h2 article-title">My Work</h2>
+        </header>
+
+        <section class="work-text">
+          <p>
+            Below are some of the projects I have worked on. Please explore my GitHub for more details.
+          </p>
+        </section>
+
+      </article>
 
     </div>
 
