fix: Update Resume and Portfolio sections with proper content and data attributes

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>My Work</button>
+            <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
 
         </ul>
@@ -226,28 +226,74 @@
           <h2 class="h2 article-title">Resume</h2>
         </header>
 
-        <section class="resume-text">
-          <p>
-            Here is a detailed overview of my professional experience, education, and skills. Please download my CV for more information.
-          </p>
+        <section class="timeline">
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Education</h3>
+          </div>
+
+          <ol class="timeline-list">
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Academy of Technology</h4>
+              <span>2020 — Present</span>
+              <p class="timeline-text">B.Tech in Electronics and Communication Engineering</p>
+            </li>
+          </ol>
+        </section>
+
+        <section class="timeline">
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Experience</h3>
+          </div>
+
+          <ol class="timeline-list">
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Software Developer Intern</h4>
+              <span>2024 — Present</span>
+              <p class="timeline-text">Working on various ML and web development projects.</p>
+            </li>
+          </ol>
         </section>
 
       </article>
 
       <!--
-        - #MY WORK
+        - #PORTFOLIO
       -->
 
-      <article class="my-work" data-page="my work">
+      <article class="portfolio" data-page="portfolio">
 
         <header>
-          <h2 class="h2 article-title">My Work</h2>
+          <h2 class="h2 article-title">Portfolio</h2>
         </header>
 
-        <section class="work-text">
-          <p>
-            Below are some of the projects I have worked on. Please explore my GitHub for more details.
-          </p>
+        <section class="projects">
+          <ul class="project-list">
+            <li class="project-item active">
+              <a href="#">
+                <figure class="project-img">
+                  <img src="/my-protfolio-website-/assets/images/Screenshot from 2025-03-19 10-57-29.png" alt="Project 1" loading="lazy">
+                </figure>
+                <h3 class="project-title">Chat Application</h3>
+              </a>
+            </li>
+
+            <li class="project-item active">
+              <a href="#">
+                <figure class="project-img">
+                  <img src="/my-protfolio-website-/assets/images/Screenshot from 2025-03-20 13-17-30.png" alt="Project 2" loading="lazy">
+                </figure>
+                <h3 class="project-title">Smart Parking System</h3>
+              </a>
+            </li>
+          </ul>
         </section>
 
       </article>
