fix: Revert to original structure with working Resume and My Work sections

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="/my-protfolio-website-/assets/images/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
 
   <!--
     - custom css link
   -->
-  <link rel="stylesheet" href="/my-protfolio-website-/assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 
   <!--
     - google font link
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="/my-protfolio-website-/assets/images/my-avatar.png" alt="Anshul Kumar Singh" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Anshul Kumar Singh" width="80">
         </figure>
 
         <div class="info-content">
@@ -50,7 +50,7 @@
 
           <p class="title">Software Developer</p>
 
-          <a href="/my-protfolio-website-/assets/cv/Anshul_Kumar_Singh_CV.pdf" class="cv-btn" download>
+          <a href="./assets/cv/Anshul_Kumar_Singh_CV.pdf" class="cv-btn" download>
             <ion-icon name="download-outline"></ion-icon>
             <span>Download CV</span>
           </a>
@@ -145,7 +145,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Portfolio</button>
+            <button class="navbar-link" data-nav-link>My Work</button>
           </li>
 
         </ul>
@@ -168,52 +168,6 @@
           </p>
         </section>
 
-        <!--
-          - service
-        -->
-
-        <section class="service">
-
-          <h3 class="h3 service-title">What i'm doing</h3>
-
-          <ul class="service-list">
-
-            <li class="service-item">
-
-              <div class="service-icon-box">
-                <img src="/my-protfolio-website-/assets/images/icon-design.svg" alt="design icon" width="40">
-              </div>
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Data science and ML development</h4>
-
-                <p class="service-item-text">
-                  Innovative ML solutions for intelligent systems.
-                </p>
-              </div>
-
-            </li>
-
-            <li class="service-item">
-
-              <div class="service-icon-box">
-                <img src="/my-protfolio-website-/assets/images/icon-dev.svg" alt="Web development icon" width="40">
-              </div>
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
-
-                <p class="service-item-text">
-                  High-quality development of sites at the Intermidate level.
-                </p>
-              </div>
-
-            </li>
-
-          </ul>
-
-        </section>
-
       </article>
 
       <!--
@@ -221,7 +175,6 @@
       -->
 
       <article class="resume" data-page="resume">
-
         <header>
           <h2 class="h2 article-title">Resume</h2>
         </header>
@@ -243,59 +196,28 @@
             </li>
           </ol>
         </section>
-
-        <section class="timeline">
-          <div class="title-wrapper">
-            <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
-            </div>
-
-            <h3 class="h3">Experience</h3>
-          </div>
-
-          <ol class="timeline-list">
-            <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Software Developer Intern</h4>
-              <span>2024 — Present</span>
-              <p class="timeline-text">Working on various ML and web development projects.</p>
-            </li>
-          </ol>
-        </section>
-
       </article>
 
       <!--
-        - #PORTFOLIO
+        - #MY WORK
       -->
 
-      <article class="portfolio" data-page="portfolio">
-
+      <article class="my-work" data-page="my work">
         <header>
-          <h2 class="h2 article-title">Portfolio</h2>
+          <h2 class="h2 article-title">My Work</h2>
         </header>
 
-        <section class="projects">
-          <ul class="project-list">
-            <li class="project-item active">
-              <a href="#">
-                <figure class="project-img">
-                  <img src="/my-protfolio-website-/assets/images/Screenshot from 2025-03-19 10-57-29.png" alt="Project 1" loading="lazy">
-                </figure>
-                <h3 class="project-title">Chat Application</h3>
-              </a>
-            </li>
+        <section class="projects-text">
+          <div class="project-item">
+            <h3>Chat Application</h3>
+            <img src="./assets/images/Screenshot from 2025-03-19 10-57-29.png" alt="Chat App" class="project-img">
+          </div>
 
-            <li class="project-item active">
-              <a href="#">
-                <figure class="project-img">
-                  <img src="/my-protfolio-website-/assets/images/Screenshot from 2025-03-20 13-17-30.png" alt="Project 2" loading="lazy">
-                </figure>
-                <h3 class="project-title">Smart Parking System</h3>
-              </a>
-            </li>
-          </ul>
+          <div class="project-item">
+            <h3>Smart Parking System</h3>
+            <img src="./assets/images/Screenshot from 2025-03-20 13-17-30.png" alt="Parking System" class="project-img">
+          </div>
         </section>
-
       </article>
 
     </div>
@@ -311,7 +233,7 @@
   <!--
     - custom js link
   -->
-  <script src="/my-protfolio-website-/assets/js/script.js"></script>
+  <script src="./assets/js/script.js"></script>
 
 </body>
 
