--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>My Work</button>
+            <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
 
         </ul>
@@ -166,6 +166,52 @@
           <p>
             Passionate about innovation and technology, I am a B.Tech student specializing in Electronics and Communication Engineering (ECE) at the Academy of Technology. With a solid foundation in electrical systems, I have expanded my expertise into the realms of machine learning, web development, and IoT. My ability to bridge hardware and software solutions allows me to tackle complex challenges creatively and efficiently. I am driven by curiosity, eager to learn, and committed to contributing impactful solutions in the ever-evolving tech landscape.
           </p>
+        </section>
+
+        <!--
+          - service
+        -->
+
+        <section class="service">
+
+          <h3 class="h3 service-title">What i'm doing</h3>
+
+          <ul class="service-list">
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/icon-design.svg" alt="design icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Data science and ML development</h4>
+
+                <p class="service-item-text">
+                  Innovative ML solutions for intelligent systems.
+                </p>
+              </div>
+
+            </li>
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Web development</h4>
+
+                <p class="service-item-text">
+                  High-quality development of sites at the Intermidate level.
+                </p>
+              </div>
+
+            </li>
+
+          </ul>
+
         </section>
 
       </article>
@@ -199,15 +245,15 @@
       </article>
 
       <!--
-        - #MY WORK
+        - #PORTFOLIO
       -->
 
-      <article class="my-work" data-page="my work">
+      <article class="portfolio" data-page="portfolio">
         <header>
-          <h2 class="h2 article-title">My Work</h2>
+          <h2 class="h2 article-title">Portfolio</h2>
         </header>
 
-        <section class="projects-text">
+        <section class="projects">
           <div class="project-item">
             <h3>Chat Application</h3>
             <img src="./assets/images/Screenshot from 2025-03-19 10-57-29.png" alt="Chat App" class="project-img">
