--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
         <section class="about-text">
           <p>
-            Passionate about innovation and technology, I am a B.Tech student specializing in Electronics and Communication Engineering (ECE) at the Academy of Technology. With a solid foundation in electrical systems, I have expanded my expertise into the realms of machine learning, web development, and IoT. My ability to bridge hardware and software solutions allows me to tackle complex challenges creatively and efficiently. I am driven by curiosity, eager to learn, and committed to contributing impactful solutions in the ever-evolving tech landscape.
+           I am a dedicated and innovative B.Tech graduate in Electronics and Communication Engineering (ECE) from the Academy of Technology. With a robust foundation in electrical systems, I have expanded my expertise into machine learning, web development, and IoT. My interdisciplinary skills enable me to seamlessly integrate hardware and software solutions, effectively addressing complex challenges with creativity and precision. Driven by curiosity and a commitment to continuous learning, I am focused on delivering impactful solutions in the dynamic and evolving technology landscap
           </p>
         </section>
 
