--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
               <h4 class="h4 timeline-item-title">Python Developer Intern – Oasis Infobyte </h4>
 
-              <span>5/03/2024 - 10/04/2024</span>
+              <span> 5/3/2024 to 10/4/2024</span>
 
               <p class="timeline-text">
                 Gained hands-on experience in Python programming for software development, working on data-driven applications with integrated machine learning techniques while developing and optimizing scripts for automation and data analysis
