--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <h4 class="h4 service-item-title">Web development</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the Intermidate level.
+                  High-quality development of sites at the Intermediate level.
                 </p>
               </div>
 
@@ -315,13 +315,19 @@
 
               <h4 class="h4 timeline-item-title">Python Developer Intern – Oasis Infobyte </h4>
 
-              <span> 5/3/2024 to 10/4/2024</span>
+              <span> March 2024 – April 2024 </span>
 
               <p class="timeline-text">
                 Gained hands-on experience in Python programming for software development, working on data-driven applications with integrated machine learning techniques while developing and optimizing scripts for automation and data analysis
                 
               </p>
+                <h4 class="h4 timeline-item-title"> Software Developer Intern -Tech Innovators Pvt. Ltd., Remote </h4>
 
+              <span> may 2024 – Aug 2024</span>
+
+              <p class="timeline-text">
+               Built and maintained responsive UIs using HTML, CSS, JavaScript, and connected to backend services.Wrote and tested SQL queries for CRM modules.Assisted in debugging and enhancing code using C# and Visual Studio.Participated in Agile sprints, daily stand-ups, and updated Jira tasks.Helped integrate and configure APIs for customer-facing services.
+              </p>
             </li>
 
             
