--- a/index.html
+++ b/index.html
@@ -321,7 +321,9 @@
                 Gained hands-on experience in Python programming for software development, working on data-driven applications with integrated machine learning techniques while developing and optimizing scripts for automation and data analysis
                 
               </p>
-                <h4 class="h4 timeline-item-title"> Software Developer Intern -Tech Innovators Pvt. Ltd., Remote </h4>
+            </li>
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title"> Software Developer Intern -Tech Innovators Pvt. Ltd.(Remote) </h4>
 
               <span> may 2024 – Aug 2024</span>
 
